# libinput-gestures-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  globals.cpp  globals.h  main.cpp
